# hometube

./: .dockerignore  .env.sample  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml.sample  pyproject.toml  run.py
.github/: labeler.yml  release.yml
.github/workflows/: build-image.yml  ci.yml  pr-labeler.yml  refresh-ytdlp.yml  release.yml
app/: __init__.py  config.py  constants.py  core.py  cut_utils.py  display_utils.py  file_system_utils.py  hometube.py  integrations_utils.py  jellyfin_integration.py  json_utils.py  logs_utils.py  main.py  medias_utils.py  multi_audio_utils.py  notifications.py  playlist_sync.py  playlist_utils.py  process_utils.py  profile_utils.py  quality_profiles.py  sponsors_utils.py  status_utils.py  subtitle_utils.py  subtitles_utils.py  text_utils.py  tmp_files.py  url_utils.py  utils-old.py  utils.py  workspace.py  ytdlp_version_check.py
app/translations/: __init__.py  en.py  fr.py
docs/: README.md  automatic-ytdlp-updates.md  contributing.md  deployment.md  development-setup.md  development.md  docker.md  generic-file-naming.md  installation.md  intelligent-caching.md  testing.md  todo.md  usage.md
docs/architecture/: ytdlp-version-management.md
requirements/: requirements.txt
scripts/: README.md  check_tests.py  demo_url_reuse_cache.py  fix_multi_audio.py  test_command_generation.py  test_metadata_preservation.py
scripts/test-workflow/: quick-check-ytdlp-detection.sh  test-ytdlp-detection.sh
tests/: test_audio_formats.py  test_config.py  test_config_jellyfin.py  test_config_subtitles.py  test_core_functions.py  test_download_attempts.py  test_end_to_end.py  test_file_operations.py  test_generic_file_naming.py  test_get_formats.py  test_jellyfin_integration.py  test_notifications.py  test_overwrite_protection.py  test_playlist_utils.py  test_preferred_client.py  test_profile_matching.py  test_status_utils.py  test_subtitle_embedding_integration.py  test_subtitles_utils.py  test_text_utils.py  test_tmp_files.py  test_tmp_folder_structure.py  test_translations.py  test_unique_folder_naming.py  test_url_info_integrity.py  test_url_info_reuse.py  test_url_utils.py  test_utils.py  test_workspace.py  test_ytdlp_version_detection.py
tests/ytdlp-json/: playlist-jdg.json  video-instagram.json  video-mono-lang-stressedout.json  video-multi-lang-disk.json
